--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 canaima-llaves (3.0+0) unstable; urgency=low
 
   * Reconstrucción del paquete canaima-llaves de acuerdo con las nuevas políticas de desarrollo de Canaima GNU/Linux
+  * [ebc4ea9] Agregando vcs-git a debian/control
 
- -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Tue, 16 Nov 2010 11:29:58 -0430
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Thu, 18 Nov 2010 18:25:07 -0430
