--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+canaima-llaves (3.1-2) unstable; urgency=low
+
+  * [36baf7b] [ canaima-desarrollador ] Los siguientes archivos han sido
+    modificados/añadidos: control
+  * [920cf0b] Nueva versión
+  * [1d68004] Agregando comprobación de scripts del mantenedor en el
+    Makefile
+  * [f683c9e] Nueva versión
+  * [bc87193] Nueva versión
+  * [d711454] Nueva versión
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Fri, 28 Oct 2011 00:36:24 -0430
+
 canaima-llaves (3.1-1) unstable; urgency=low
 
   * Versión para Canaima Popular 3.1
