--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+canaima-llaves (3.1-3) unstable; urgency=low
+
+  * [d711454] Nueva versión
+  * [18d1b39] Nueva versión
+  * [58253f7] Cambio estético en debian/control.
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Fri, 28 Oct 2011 00:56:48 -0430
+
 canaima-llaves (3.1-2) unstable; urgency=low
 
   * [36baf7b] [ canaima-desarrollador ] Los siguientes archivos han sido
