--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+canaima-llaves (3.1-4) unstable; urgency=low
+
+  * [716e068] "Modificando el uploader del archivo control"
+  * [02ba9d9] revisando algun warning con el lintian
+
+ -- Randy Ortega <ortega571@gmail.com>  Mon, 28 Nov 2011 11:23:04 -0430
+
 canaima-llaves (3.1-3) unstable; urgency=low
 
   * [d711454] Nueva versión
