--- a/debian/changelog
+++ b/debian/changelog
@@ -13,8 +13,9 @@ canaima-llaves (3.1-4) unstable; urgency=low
     scripts para añadir o remover una llave. Añadiendo Pre-Depends a
     gnupg y apt.
   * [8b0d8e5] Cambiando el campo de mantenedor.
+  * [970af7c] Corrigiendo error en el Makefile.
 
- -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Tue, 12 Jun 2012 13:49:06 -0430
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Tue, 12 Jun 2012 13:53:35 -0430
 
 canaima-llaves (3.1-3) unstable; urgency=low
 
